Fix z-index of popovers and filters (Close #87)

--- a/beancount_web/static/sass/_chartist.scss
+++ b/beancount_web/static/sass/_chartist.scss
@@ -88,7 +88,7 @@ $ct-series-colors: (
 
     .ct-legend {
         position: absolute;
-        z-index: 10;
+        z-index: 6;
         top: 17px;
         left: 10px;
 
